app/component/kanban-board/kanban-board.scss
.kanban-board {
    background: #f0f0f0;
    max-height: 820px;
    overflow-x: hidden;
    .kanban-wrapper {
        display: table;
        table-layout: fixed;
        height: 100%;
        width: 100%;
        min-height: 350px;
    }

    .kanban-column {
        display: table-cell;
        vertical-align: top;
        width: 228px;
        min-width: 228px;
        background: #f6f6f6;
        border-left: 5px solid #ffffff;
        border-right: 5px solid #ffffff;
        &:last-child {
            float: none;
        }
        padding-top: 8px;
        padding-bottom: 20px;
    }

    .empty-placeholder {
        display: inline-block;
        vertical-align: middle;
        text-align: center;
        font-size: 12px;
        color: #555555;
        height: 0;
        line-height: 80px;
        width: 100%;
        overflow: visible;
    }

    .as-sortable-placeholder {
         background: #f9f9f9;
         margin: 5px 0;
         border: 1px #b0b0b0 dashed;
         border-radius: 3px;
     }

    .empty-placeholder + .as-sortable-placeholder {
        margin-top: -10px;
    }

    &.collapse {
        display: none;
    }

    &.collapse.in {
        display: block;
    }

    &.collapsing {
        position: relative;
        height: 0;
        overflow: hidden;
        transition: height .35s ease;
    }
}

//TODO: move this out of here
.kanban {
    max-width: 1140px;
    margin: 0 auto;
    font-family: 'Source Sans Pro', sans-serif;
    -webkit-font-smoothing: antialiased;
    margin-bottom: 13px;


    .kanban-header {
        border: 1px solid #cdcdcd;
        overflow: hidden;
        margin-left: -2px;;
    }
}

.modal-open {
    overflow: hidden;
}

